@@ -5,7 +5,7 @@ export(
 	mosaic.glm, sieve.glm, assoc.glm,
 	modFit, modFit.glm, modFit.loglm,
 	GKgamma,print.GKgamma,
-	glmlist, summarize, 
+	glmlist, loglmlist, summarize, 
 	print.Kappa)
 
 S3method(mosaic, glm)
@@ -15,6 +15,8 @@ S3method(modFit, glm)
 S3method(modFit, loglm)
 S3method(summarize, glm)
 S3method(summarize, glmlist)
+S3method(summarize, loglm)
+S3method(summarize, loglmlist)
 S3method(print, GKgamma)
 S3method(print, Kappa)
 
